[tool.poetry]
name = "homeassistant-ble-dev"
version = "0.1.0"
description = ""
authors = ["Mark Paxton <mark.paxton@booking.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
pycountry = "^23.12.11"
voluptuous = "^0.13.1"
homeassistant = "^2024.5.3"
tuya-device-sharing-sdk = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
